# registro-qg-desktop

./: .gitignore  README.md  index.html  package.json  vite.config.js
.github/workflows/: build.yml
assets/css/: cards.css  forms.css  modal.css  tables.css  utilities.css
assets/js/: app.js  dashboard.js  finance.js  military.js  modal.js  storage.js  structures.js  utils.js  warehouse.js
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/core/: backup.js  calendar.js  config.js  persistence.js  state.js  validation.js
src/data/: regolamento.json
src/engine/: closure.js  finance.js  production.js  qg.js  risk.js  summary.js  tokens.js
src/js/: app.js  guide.js  storage.js  theme.js  ui.js
src/modules/: alchimista.js  biblioteca.js  bottega-artistica.js  campo-addestramento.js  fattoria.js  giardino.js  impresa.js  locanda.js  outpost.js  porto-navale.js  sala-arcana.js  sala-svago.js  santuario.js  sartoria.js  segheria.js  stato-iniziale.js  studio-arcano.js  studio-diplomatico.js
src/styles/: components.css  guide.css  layout.css  micro.css  theme.css
src/ui/: dashboard.js  finance.js  render.js  routes.js  structures.js  toast.js  warehouse.js
src/utils/: dom.js  format.js
