[package]
name = "registro-qg"
version = "1.0.0"
description = "Registro del Quartier Generale di Gandora"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "registro_qg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "registro-qg"
path = "src/main.rs"
